<resources>
    <string name="app_name">MVVM</string>
    <string name="send_pin">send pin</string>
    <string name="sign_in_with_facebook">sign in with facebook</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="customer_device">customer device</string>
    <string name="sign_up">Sign up</string>
    <string name="employee">EMPLOYEE</string>
    <string name="admin">Admin</string>
    <string name="email_mobile">Email/ Mobile</string>
    <string name="verification">Verification</string>
    <string name="enter_pin_code">Enter pin code</string>
    <string name="the_pin_you">The pin you enter is wrong</string>
    <string name="you_have_to">You have to wait 60 seconds before being able to resend PIN</string>
    <string name="resend_pin">Resend pin</string>
    <string name="no_running_bill">No Running Bill</string>
    <string name="pos_system">POS System</string>
    <string name="add_bill">Add Bill</string>
    <string name="add_photo">Add Photo</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="barcode_input_dot">…</string>
    <string name="barcode_input">Barcode Input</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="_20">20</string>
    <string name="next_add_category">Next: Add Category</string>
    <string name="category">Category</string>
    <string name="test_txt">Food</string>
    <string name="add_category">Add Category</string>
    <string name="save_new_bill">Save New Bill</string>
    <string name="bills">Bills</string>
    <string name="all">All</string>
    <string name="type">Type</string>
    <string name="test_date_from">22 Jan 2020</string>
    <string name="from">From</string>
    <string name="test_10_usd">10 USD</string>
    <string name="amount_to_get_from_client">Amount to get from client</string>
    <string name="cash_received_total_debt">Cash Received (Total-debt)</string>
    <string name="hash">#</string>
    <string name="total">Total</string>
    <string name="total_">Total: </string>
    <string name="cash_debit">Cash/Debit</string>
    <string name="date">Date</string>
    <string name="bill_name">Bill Name</string>
    <string name="test_1">1</string>
    <string name="test_1000">$1000</string>
    <string name="test_date_12_02_20">12.02.20</string>
    <string name="stuff">stuff</string>
    <string name="pos_system_online">POS System Online</string>
    <string name="organize_your_sales_easily">Organize your sales easily</string>
    <string name="to">To</string>
    <string name="no_existing_category">No Existing Categories</string>
    <string name="categories">Categories</string>
    <string name="category_name">Category Name</string>
    <string name="save_new_category">Save new category</string>
    <string name="test_4_products">4 products</string>
    <string name="test_dirnks">Dirnks</string>
    <string name="test_eggs_salad">Eggs Salad</string>
    <string name="test_total_2000">$2000</string>
    <string name="test_30_items">(30 items)</string>
    <string name="test_total_200">$200</string>
    <string name="item_price_">Item Price:</string>
    <string name="test_add_to_cart_100">add to cart ($100)</string>
    <string name="_20_egg_salad">20 Egg Salad</string>
    <string name="added_to_billing">Added to Billing</string>
    <string name="done">done</string>
    <string name="add_another">Add Another</string>
    <string name="add_new_product">Add New Product</string>
    <string name="save_new_product">Save New Product</string>
    <string name="error_message">Something Went Wrong</string>
    <string name="partial_payment">Partial Payment</string>
    <string name="coupon">Coupon</string>
    <string name="discretionary_service_charge_of_3_added_to_the_bill">Discretionary Service Charge of 3% added to the bill</string>
    <string name="packaging">Packaging</string>
    <string name="delivary">Delivery</string>
    <string name="no">No</string>
    <string name="subtotal">Subtotal</string>
    <string name="yes">Yes</string>
    <string name="packaging_delivery"><![CDATA[Packaging & Delivery]]></string>
    <string name="sales_tax">Sales Tax</string>
    <string name="bill_add_close">Bill add close</string>
    <string name="bill_and_print">Bill and print</string>
    <string name="bill_and_save_to_pdf">Bill and Save to pdf</string>
    <string name="burger">Burger</string>
    <string name="google_payment">Google Payment</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="packaging_size">Packaging Size</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="inventory">Inventory</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="settings">Settings</string>

    <string name="permission_camera">Permission has been denied. Please give read and write storage and camera permission and then try
        again.</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_date_of_birth">Customer Date of Birth</string>
    <string name="customer_phone_number">Customer Phone Number</string>
    <string name="customer_post_office">Customer Post Office</string>
    <string name="customer_postal_code">Customer Postal Code</string>
    <string name="thana">Thana</string>
    <string name="district">District</string>
    <string name="register_customer">Register Customer</string>
    <string name="view_customer">View Customer</string>
    <string name="submit">Submit</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in To Continue</string>
    <string name="username">Username</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">Log In</string>
    <string name="successful">Successful!</string>
    <string name="success_msg">You have successfully change password. Please use your new password when loging in.</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_msg">Reset code was sent to your email. Please enter the code and create new password.</string>
    <string name="reset_code">Reset code</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="send_request">Send Request</string>
    <string name="reset_instruction">Please enter your email below to receive your password reset instructions</string>
    <string name="dummy_email">pangcheo1210@gmail.com</string>
    <string name="task_and_assign">Task and assign</string>
    <string name="task_msg">Task and assign them to colleagues</string>
    <string name="get_started">Get Started</string>
    <string name="add_task">Add task</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_task_type">Choose task type</string>
    <string name="hey_tamara">Hey Tamara</string>
    <string name="today_you_have_12_tasks">Today you have 12 tasks</string>
    <string name="tasks_created">tasks created</string>
    <string name="tasks_left">tasks left</string>
    <string name="enter_username">Enter username</string>
    <string name="email">email</string>
    <string name="add_amount">Add Amount</string>
    <string name="number_of_installment">Number Of Installment</string>
    <string name="rate_of_interest">Rate Of Interest</string>
</resources>
