<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/etAddAmount"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/dp_32"
      android:layout_marginStart="@dimen/dp_32"
      android:layout_marginTop="@dimen/dp_16"
      android:background="@android:color/transparent"
      android:hint="@string/add_amount"
      android:padding="@dimen/dp_8"
      android:textSize="@dimen/sp_24"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/layout_todo"
      />

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/etAddRateOfInterest"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/dp_32"
      android:layout_marginStart="@dimen/dp_32"
      android:layout_marginTop="@dimen/dp_8"
      android:background="@android:color/transparent"
      android:hint="@string/rate_of_interest"
      android:padding="@dimen/dp_8"
      android:textSize="@dimen/sp_24"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etAddAmount"
      />

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/etNumberInstallment"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/dp_32"
      android:layout_marginStart="@dimen/dp_32"
      android:layout_marginTop="@dimen/dp_8"
      android:background="@android:color/transparent"
      android:hint="@string/number_of_installment"
      android:padding="@dimen/dp_8"
      android:textSize="@dimen/sp_24"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etAddRateOfInterest"
      />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/btnAddTask"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/button_height"
      android:layout_marginBottom="@dimen/dp_32"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      style="@style/button"
      >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/add_task"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/buttonTextStyle"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <include
      layout="@layout/toolbar_todo_list"
      android:id="@+id/layout_todo"
      android:layout_width="@dimen/dp_0"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />


</androidx.constraintlayout.widget.ConstraintLayout>