<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <TextView
      android:id="@+id/tv_welcome"
      android:layout_width="@dimen/dp_0"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/dp_32"
      android:layout_marginStart="@dimen/dp_32"
      android:ellipsize="end"
      android:gravity="center"
      android:maxLines="1"
      android:text="@string/successful"
      android:textAppearance="@style/TextStyle"
      android:textColor="@color/colorBlack"
      android:textSize="@dimen/sp_24"
      android:textStyle="normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/gl_start"
      style="@style/TextAppearance.AppCompat.Medium"
      />

  <TextView
      android:id="@+id/tv_success_msg"
      android:layout_width="@dimen/dp_0"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/dp_32"
      android:layout_marginStart="@dimen/dp_32"
      android:layout_marginTop="@dimen/dp_16"
      android:ellipsize="end"
      android:gravity="center"
      android:maxLines="3"
      android:text="@string/success_msg"
      android:textAppearance="@style/TextStyle"
      android:textColor="@color/colorBlack"
      android:textSize="@dimen/sp_16"
      android:textStyle="normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
      style="@style/TextAppearance.AppCompat.Medium"
      />

  <TextView
      android:id="@+id/tvLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/dp_32"
      android:layout_marginStart="@dimen/dp_32"
      android:ellipsize="end"
      android:gravity="end"
      android:maxLines="1"
      android:text="@string/log_in"
      android:textAppearance="@style/TextStyle"
      android:textColor="@color/colorBlack"
      android:textSize="@dimen/sp_20"
      android:textStyle="normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/gl_end"
      tools:text="@string/log_in"
      style="@style/TextAppearance.AppCompat.Medium"
      />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/gl_end"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintGuide_percent="0.80"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/gl_start"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintGuide_percent="0.50"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

</androidx.constraintlayout.widget.ConstraintLayout>